fix(aio): align top-level nav-items consistently
Fixes #16939

--- a/aio/src/styles/1-layouts/_sidenav.scss
+++ b/aio/src/styles/1-layouts/_sidenav.scss
@@ -138,7 +138,7 @@ a.selected.level-1,
   font-family: $main-font;
   font-size: 14px;
   font-weight: 400;
-  padding-left: 16px;
+  padding-left: 20px;
   transition: background-color 0.2s;
 }
 
